mi primera confirmación de actualización

--- a/styles.css
+++ b/styles.css
@@ -60,6 +60,10 @@ nav a:hover {
 
 /*FORMATO DE PÁGINAS*/
 
+.greeting {
+  text-align: center;
+}
+
 .container {
   max-width: 800px;
   margin: auto;
